Worked on the vehicle for sale.

--- a/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vehicle
+﻿@model VehicleForSaleViewModel
 
 @{
     Layout = "~/Views/Shared/_VehicleForSaleLayout.cshtml";
@@ -14,11 +14,11 @@
                         <img class="d-block w-100" src="~/images/vehicle_images/Test_ABC123/1956d4bc-02be-4829-ab3e-22220c4f72f7_ABC123_test.jpg" alt="IMG_NOT_FOUND">
                     </div>
                     @*<div class="carousel-item">
-                        <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/8cdf0c20-1bb9-4bb5-b086-a2bc048ae884_bmw_inside.jpg" alt="IMG_NOT_FOUND">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/f31db4e6-3676-4312-9c57-1776b19df9b5_BMW.jpg" alt="IMG_NOT_FOUND">
-                    </div>*@
+                            <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/8cdf0c20-1bb9-4bb5-b086-a2bc048ae884_bmw_inside.jpg" alt="IMG_NOT_FOUND">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/f31db4e6-3676-4312-9c57-1776b19df9b5_BMW.jpg" alt="IMG_NOT_FOUND">
+                        </div>*@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -49,9 +49,8 @@
         </div>
     </div>
     <div class="float-sm-right" style="margin-bottom:10px">
-        <button type="button" class="btn btn-warning" id="bulkDeleteVehicle">Tillbaka</button>
-        <button type="button" class="btn btn-info" id="bulkDeleteVehicle">Dela</button>
+        <button type="button" class="btn btn-warning">Tillbaka</button>
+        <button type="button" class="btn btn-info">Dela</button>
     </div>
 </div>
-
 
