--- a/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
@@ -12,5 +12,6 @@
     </div>
     <script src="~/js/site.min.js"></script>
     <script src="~/js/vehicleDelete.js"></script>
+    <script src="~/js/addNewVehicle.js"></script>
 </body>
 </html>
