Fixed so you can check a checkbox and click Edit button. Get correct vehicle routed to the EditVehicleForm.

--- a/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
@@ -13,5 +13,6 @@
     <script src="~/js/site.min.js"></script>
     <script src="~/js/vehicleDelete.js"></script>
     <script src="~/js/addNewVehicle.js"></script>
+    <script src="~/js/editVehicle.js"></script>
 </body>
 </html>
