--- a/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
@@ -140,7 +140,7 @@
                     <option selected>Välj</option>
                     @foreach (var office in ViewBag.offices)
                     {
-                        <option id="officeSelectOption" value="@office">@office</option>
+                        <option value="@office">@office</option>
                     }
                 </select>
             </div>
