--- a/BolindersBil.Web/Views/Vehicle/Admin.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Admin.cshtml
@@ -12,10 +12,9 @@
     </div>
     <div class="float-sm-right" style="margin-bottom:10px">
         <a asp-controller="Vehicle" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
-        @*<a asp-controller="Vehicle" asp-action="EditVehicle" class="btn btn-warning">Edit</a>*@
-        <button type="button" class="btn btn-warning" name="updateVehicle" id="updateVehicle">Update</button>
-        <button type="button" class="btn btn-danger" name="deleteVehicle" id="deleteVehicle" data-toggle="modal" data-target="#deleteModal">Delete</button>
-        <button type="button" class="btn btn-danger" name="bulkDeleteVehicle" id="bulkDeleteVehicle" data-toggle="modal" data-target="#bulkDeleteModal">Bulk Delete</button>
+        <a id="editButton" onlclick="editButtonClick()" class="btn btn-sm btn-warning">Edit</a>
+        <button type="button" class="btn btn-sm btn-danger" name="deleteVehicle" id="deleteVehicle" data-toggle="modal" data-target="#deleteModal">Delete</button>
+        <button type="button" class="btn btn-sm btn-danger" name="bulkDeleteVehicle" id="bulkDeleteVehicle" data-toggle="modal" data-target="#bulkDeleteModal">Bulk Delete</button>
     </div>
 
     @foreach (var v in Model)
@@ -26,7 +25,6 @@
                 <td><input type="checkbox" class="chk" value="@v.Id" /> @v.Brand @v.Model, @v.RegNr</td>
             </tr>
         </table>
-
 
         <!-- This is the deleteModal to make sure that the user really wants to delete a vehicle? -->
         <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -51,7 +49,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- This is the bulkDeleteModal to make sure that the user really wants to delete several vehicles? -->
         <div class="modal fade" id="bulkDeleteModal" tabindex="-1" role="dialog" aria-labelledby="bulkdDeleteModalLabel" aria-hidden="true">
