--- a/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
@@ -11,7 +11,9 @@
 <hr />
 
 <form asp-action="EditVehicle" method="post" enctype="multipart/form-data" class="form-horizontal">
+
     <input type="hidden" value="@Model.Id" id="id" name="id" />
+
     <div class="form-group">
         <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
         <div class="col-sm-10">
@@ -108,10 +110,14 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
         <div class="col-sm-10">
-            <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-            <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
+            <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" id="usedCheckbox" value="false"></label>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-10">
+            <label class="checkbox-inline"><strong>Leasbar för företag?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Leasable" type="checkbox" id="leasableCheckbox" value="false"></label>
         </div>
     </div>
 
@@ -128,22 +134,12 @@
         </div>
     </div>
 
-    @* TODO: fix so you can visually see the files you have uploaded. *@
     <div class="form-group">
-        <label asp-for="Picture" class="control-label col-sm-2"><strong>Bilder:</strong></label>
-        <div class="col-sm-10">
-            <div>
-                <input asp-for="Picture" type="file" id="files" class="custom-file-input" multiple>
-                <label class="custom-file-label col-sm-4">Välj fil</label>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Leasable" class="control-label col-sm-4"><strong>Leasbar för företag:</strong></label>
-        <div class="col-sm-10">
-            <label class="checkbox-inline"><input asp-for="Leasable" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-            <label class="checkbox-inline"><input asp-for="Leasable" type="checkbox" value="false">  Nej</label>
+        <label for="images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
+        <div class="col-sm-4">
+            <input type="file" id="images" name="images" class="form-control-file" multiple style="display:none">
+            <button class="btn" id="selectFilesBtn">Välj filer</button>
+            <div class="form-group" id="filePreviews"></div>
         </div>
     </div>
 
