--- a/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
@@ -4,170 +4,171 @@
     ViewData["Title"] = "Admin - EditVehicle";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<div class="container">
+    <div style="text-align:center; margin-top:20px; margin-bottom:25px">
+        <h2><strong>Edit Vehicle: </strong><small><i>@Model.RegNr</i></small></h2>
+    </div>
+    <hr />
 
-<div style="text-align:center; margin-top:20px; margin-bottom:25px">
-    <h2><strong>Edit Vehicle: </strong><small><i>@Model.RegNr</i></small></h2>
+    <form asp-action="EditVehicle" id="editVehicleForm" enctype="multipart/form-data" class="form-horizontal">
+
+        <input type="hidden" value="@Model.Id" id="id" name="id" />
+
+        <div class="form-group">
+            <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="RegNr" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Brand" class="control-label col-sm-2"><strong>Märke:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Brand" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Model" class="control-label col-sm-2"><strong>Modell:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Model" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="ModelDescription" class="control-label col-sm-2"><strong>Modellbeskrivning:</strong></label>
+            <div class="col-sm-10">
+                <textarea asp-for="ModelDescription" class="form-control"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Year" class="control-label col-sm-2"><strong>Årsmodell:</strong></label>
+            <div class="col-sm-10">
+                <select asp-for="Year" class="form-control" id="">
+                    <option selected>@Model.Year</option>
+                    @foreach (var y in ViewBag.Years)
+                    {
+                        <option value="@y">@y</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Kilometer" class="control-label col-sm-2"><strong>Kilometer:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Kilometer" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Price" class="control-label col-sm-2"><strong>Pris:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Price" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Body" class="control-label col-sm-2"><strong>Karosstyp:</strong></label>
+            <div class="col-sm-10">
+                <select asp-for="Body" class="form-control" id="">
+                    <option selected>@Model.Body</option>
+                    @foreach (var b in Model.BodyTypes)
+                    {
+                        <option value="@b">@b</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Color" class="control-label col-sm-2"><strong>Färg:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Color" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Gearbox" class="control-label col-sm-2"><strong>Växellådstyp:</strong></label>
+            <div class="col-sm-10">
+                <select asp-for="Gearbox" class="form-control" id="">
+                    <option selected>@Model.Gearbox</option>
+                    @foreach (var g in Model.GearTypes)
+                    {
+                        <option value="@g">@g</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Fuel" class="control-label col-sm-2"><strong>Bränsletyp:</strong></label>
+            <div class="col-sm-10">
+                <select asp-for="Fuel" class="form-control" id="">
+                    <option selected>@Model.Fuel</option>
+                    @foreach (var f in Model.FuelTypes)
+                    {
+                        <option value="@f">@f</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Horsepower" class="control-label col-sm-2"><strong>Hästkrafter:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="Horsepower" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-10">
+                <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" id="usedCheckbox" value="false"></label>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-10">
+                <label class="checkbox-inline"><strong>Leasbar för företag?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Leasable" type="checkbox" id="leasableCheckbox" value="false"></label>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Office" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
+            <div class="col-sm-10">
+                <select asp-for="Office" class="form-control" id="">
+                    <option selected>@Model.Office</option>
+                    @foreach (var o in Model.Offices)
+                    {
+                        <option value="@o">@o</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
+            <div class="col-sm-4">
+                <input type="file" id="images" name="images" class="form-control-file" multiple style="display:none">
+                <button class="btn" id="selectFilesBtn">Välj filer</button>
+                <div class="form-group" id="filePreviews"></div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="VehicleAttribute" class="control-label col-sm-2"><strong>Pipe-separerad attributlista:</strong></label>
+            <div class="col-sm-10">
+                <input asp-for="VehicleAttribute" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-10">
+                <button class="btn btn-primary" type="submit">Save</button>
+                <a asp-controller="Vehicle" asp-action="Admin" class="btn btn-secondary">Cancel</a>
+            </div>
+        </div>
+
+    </form>
 </div>
-<hr />
-
-<form asp-action="EditVehicle" id="editVehicleForm" enctype="multipart/form-data" class="form-horizontal">
-
-    <input type="hidden" value="@Model.Id" id="id" name="id" />
-
-    <div class="form-group">
-        <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="RegNr" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Brand" class="control-label col-sm-2"><strong>Märke:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Brand" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Model" class="control-label col-sm-2"><strong>Modell:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Model" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="ModelDescription" class="control-label col-sm-2"><strong>Modellbeskrivning:</strong></label>
-        <div class="col-sm-10">
-            <textarea asp-for="ModelDescription" class="form-control"></textarea>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Year" class="control-label col-sm-2"><strong>Årsmodell:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Year" class="form-control" id="">
-                <option selected>@Model.Year</option>
-                @foreach (var y in ViewBag.Years)
-                {
-                    <option value="@y">@y</option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Kilometer" class="control-label col-sm-2"><strong>Kilometer:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Kilometer" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Price" class="control-label col-sm-2"><strong>Pris:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Price" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Body" class="control-label col-sm-2"><strong>Karosstyp:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Body" class="form-control" id="">
-                <option selected>@Model.Body</option>
-                @foreach (var b in Model.BodyTypes)
-                {
-                    <option value="@b">@b</option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Color" class="control-label col-sm-2"><strong>Färg:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Color" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Gearbox" class="control-label col-sm-2"><strong>Växellådstyp:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Gearbox" class="form-control" id="">
-                <option selected>@Model.Gearbox</option>
-                @foreach (var g in Model.GearTypes)
-                {
-                    <option value="@g">@g</option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Fuel" class="control-label col-sm-2"><strong>Bränsletyp:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Fuel" class="form-control" id="">
-                <option selected>@Model.Fuel</option>
-                @foreach (var f in Model.FuelTypes)
-                {
-                    <option value="@f">@f</option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Horsepower" class="control-label col-sm-2"><strong>Hästkrafter:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="Horsepower" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-sm-10">
-            <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" id="usedCheckbox" value="false"></label>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-sm-10">
-            <label class="checkbox-inline"><strong>Leasbar för företag?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Leasable" type="checkbox" id="leasableCheckbox" value="false"></label>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Office" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Office" class="form-control" id="">
-                <option selected>@Model.Office</option>
-                @foreach (var o in Model.Offices)
-                {
-                    <option value="@o">@o</option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
-        <div class="col-sm-4">
-            <input type="file" id="images" name="images" class="form-control-file" multiple style="display:none">
-            <button class="btn" id="selectFilesBtn">Välj filer</button>
-            <div class="form-group" id="filePreviews"></div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="VehicleAttribute" class="control-label col-sm-2"><strong>Pipe-separerad attributlista:</strong></label>
-        <div class="col-sm-10">
-            <input asp-for="VehicleAttribute" class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-sm-10">
-            <button class="btn btn-primary" type="submit">Save</button>
-            <a asp-controller="Vehicle" asp-action="Admin" class="btn btn-secondary">Cancel</a>
-        </div>
-    </div>
-
-</form>
