Restructuring Index method in Vehicle controller. Going to use jQuery to get information for the filtering system.

--- a/BolindersBil.Web/Views/Shared/_Layout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <partial name="_CookiesConsentPartial" />
     <partial name="NavbarPartialView" />
 
-    <div>
+    <div style="padding: 25px 25px;">
         @RenderBody()
     </div>
 
