--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -1,53 +1,79 @@
 ﻿@*@model VehiclesSearchViewModel*@
 
 <div class="container">
-    <div class="">
-        <div id="filterBox">
+    <div>
+        <div>
             <form>
-                <div class="form-group">
-                    <label>Årstyp</label>
-                    <select class="form-control"></select>
-                </div>
-                <div class="form-group">
-                    <label>Bränsle</label>
-                    <select class="form-control">
-                        <option selected>Bensin</option>
-                        <option>Disel</option>
-                        <option>El</option>
-                        <option>Miljöbränsle/Hybrid</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Karosstyp</label>
-                    <select class="form-control">
-                        <option selected>Småbil</option>
-                        <option>Sedan</option>
-                        <option>Halvbil</option>
-                        <option>Kombi</option>
-                        <option>SUV</option>
-                        <option>Coupé</option>
-                        <option>Cab</option>
-                        <option>Familjebuss</option>
-                        <option>Yrkesfordon</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Pris</label>
-                    <input class="form-control" type="range" />
-                </div>
-                <div class="form-group">
-                    <label>Mil</label>
-                    <input class="form-control" type="range" />
-                </div>
-                <div class="form-group">
-                    <label>Växellåda</label>
-                    <select class="form-control">
-                        <option selected>Manuell</option>
-                        <option>Automat</option>
-                    </select>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Årstyp</label>
+                            <select class="form-control">
+                                <option disabled selected>Välj</option>
+                                <option value="modern-00">Modern-2000</option>
+                                <option value="00-90">2000-1990</option>
+                                <option value="90-80">1990-1980</option>
+                                <option value="80-60">1980-1960</option>
+                                <option value="60-old">1960-Older</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Bränsle</label>
+                            <select class="form-control">
+                                <option disabled selected>Välj</option>
+                                <option>Diesel</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
-
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Karosstyp</label>
+                            <select class="form-control">
+                                <option disabled selected>Välj</option>
+                                <option>Småbil</option>
+                                <option>Sedan</option>
+                                <option>Halvbil</option>
+                                <option>Kombi</option>
+                                <option>SUV</option>
+                                <option>Coupé</option>
+                                <option>Cab</option>
+                                <option>Familjebuss</option>
+                                <option>Yrkesfordon</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Växellåda</label>
+                            <select class="form-control">
+                                <option selected>Manuell</option>
+                                <option>Automat</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                
+                @*<div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Pris</label>
+                            <input class="form-control" type="range" />
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Mil</label>
+                            <input class="form-control" type="range" />
+                        </div>
+                    </div>
+                </div>*@
+                
             </form>
         </div>
     </div>
