--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -1,24 +1,29 @@
-﻿@*@model VehiclesSearchViewModel*@
+﻿@model FilterVehicleViewModel
+
+@foreach(var item in Model.Vehicles)
+{
+    <p>@item</p>
+}
 
 <div class="container">
     <div>
         <div>
-            <form>
+            <form asp-controller="Vehicle" asp-action="Index" method="get">
 
                 <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Årstyp</label>
-                            <select class="form-control">
-                                <option disabled selected>Välj</option>
-                                <option value="modern-00">Modern-2000</option>
-                                <option value="00-90">2000-1990</option>
-                                <option value="90-80">1990-1980</option>
-                                <option value="80-60">1980-1960</option>
-                                <option value="60-old">1960-Older</option>
-                            </select>
-                        </div>
-                    </div>
+                    @*<div class="col">
+                            <div class="form-group">
+                                <label>Årstyp</label>
+                                <select class="form-control">
+                                    <option disabled selected>Välj</option>
+                                    <option value="modern-00">Modern-2000</option>
+                                    <option value="00-90">2000-1990</option>
+                                    <option value="90-80">1990-1980</option>
+                                    <option value="80-60">1980-1960</option>
+                                    <option value="60-old">1960-Older</option>
+                                </select>
+                            </div>
+                        </div>*@
                     <div class="col">
                         <div class="form-group">
                             <label>Bränsle</label>
@@ -58,62 +63,69 @@
                         </div>
                     </div>
                 </div>
-                
+
                 @*<div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Pris</label>
-                            <input class="form-control" type="range" />
+                        <div class="col">
+                            <div class="form-group">
+                                <label>Pris</label>
+                                <input class="form-control" type="range" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Mil</label>
-                            <input class="form-control" type="range" />
+                        <div class="col">
+                            <div class="form-group">
+                                <label>Mil</label>
+                                <input class="form-control" type="range" />
+                            </div>
                         </div>
+                    </div>*@
+
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <button class="btn btn-primary" type="submit">Filter</button>
+                        <button type="reset" class="btn btn-secondary">Clear</button>
                     </div>
-                </div>*@
-                
+                </div>
+
             </form>
         </div>
     </div>
 
 
     @*<div class="row">
-        @foreach (var v in Model.Vehicles)
-        {
+            @foreach (var v in Model.Vehicles)
+            {
 
-            <div class="row">
-                <input type="hidden" value="@v.Id" />
-                <div class="col-5">
-                    @if (Model.Path == null)
-                    {
-                        <img src="https://via.placeholder.com/300x150" />
-                    }
-                    else
-                    {
-                        <img src="@Model.Path" />
-                        
-                    }
-                </div>
-                <div class="col-4">
-                    <span>@v.Office</span>
-                    <h3>@v.Brand @v.Model @v.ModelDescription @v.Year</h3>
-                    <span>@v.Fuel | @v.Gearbox | @v.Kilometer</span>
-                    <h4>@v.Price Kr</h4>
-                </div>
-                <div class="col-3 float-sm-right">
-                    <span>@v.UpdatedDate.ToString("dd/MM/yyyy hh:mm")</span>
-                </div>
-                <a asp-action="Vehicle" class="btn btn-success" asp-route-vehicleId="@v.Id">
-                    Mer information...
-                </a>
-            </div>
-        }
-    </div>
-    <div page-model="@Model.Pager" page-action="VehicleList">
+                <div class="row">
+                    <input type="hidden" value="@v.Id" />
+                    <div class="col-5">
+                        @if (Model.Path == null)
+                        {
+                            <img src="https://via.placeholder.com/300x150" />
+                        }
+                        else
+                        {
+                            <img src="@Model.Path" />
 
-    </div>*@
+                        }
+                    </div>
+                    <div class="col-4">
+                        <span>@v.Office</span>
+                        <h3>@v.Brand @v.Model @v.ModelDescription @v.Year</h3>
+                        <span>@v.Fuel | @v.Gearbox | @v.Kilometer</span>
+                        <h4>@v.Price Kr</h4>
+                    </div>
+                    <div class="col-3 float-sm-right">
+                        <span>@v.UpdatedDate.ToString("dd/MM/yyyy hh:mm")</span>
+                    </div>
+                    <a asp-action="Vehicle" class="btn btn-success" asp-route-vehicleId="@v.Id">
+                        Mer information...
+                    </a>
+                </div>
+            }
+        </div>
+        <div page-model="@Model.Pager" page-action="VehicleList">
+
+        </div>*@
 </div>
 
 @*@Html.ActionLink("Load next 8 Vehicles", "Vehicles", "Controller", new { page = Model.Pager.CurrentPage + 1 })*@
